stealth (1.47.4)

  * Added g++ option --std=c++0x to match the latest Bobcat library
  * Stealth is now by default installed in /usr/bin (instead of /usr/sbin) as
    non-root users are also able to use stealth, e.g., to monitor the
    integrity of their own files. Stealth support scripts (stealthcleanup,
    stealthcron, stealthmail) are found by default in in
    /usr/share/doc/stealth/scripts/usr/bin and you might want to install them
    in /usr/bin rather than /usr/sbin, as suggested previously.

    **MAKE SURE** that `/sbin/' is changed to `/bin/' in any scripts you may
    use to activate stealth (e.g. /etc/cron.d/stealth, calling stealthcron)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 03 Sep 2009 13:52:38 +0200

stealth (1.47.3)

  * Build script's `manual-tmp' removed, reactivated `manual'. Build now
    allows separate installation of program, man-page and manual

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 30 Mar 2009 09:53:39 +0200
    
stealth (1.47.2)

  * Minor changes wrt Process object definitions to prevent `obsolete'
    warnings from by now (since bobcat 1.21.1) obsolete Process
    constructors. Also, the Process mail constructor no longer needs to call
    the mail program as a command to /bin/sh.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 24 Oct 2008 14:37:19 +0200
    
stealth (1.47.1)
    
  * Defined the --max-get-size option to restrict the size of files
    that can be received from a target system. By default 10M.

  * As the MD5 hash is no longer considered to be cryptographically
    secure, stealth users should now use an alternative way to compute
    hash-values. It is suggested to switch to SHA1 hash computations. All
    stealth documentation was updated accordingly.

stealth (1.46.1)

  * Introduced sub-sub-version numbers for minor changes
 
  * The `build' script no longer automatically strips the binary

stealth (1.46)

  * Stealth's icmake scripts adapted to work with icmake > V 7.00 as well.
